Adding swaggerSecurityHandlers to test Swagger security features.
